# fpmi_data_science

./: README.md  pyproject.toml  task.md
Homework_1/: EDA.ipynb  new.ipynb
Homework_1/data/processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
Homework_1/notebooks/: eda.ipynb  models.ipynb  preprocessing.ipynb
Homework_1/src/features/: example.py
