[tool.poetry]
name = "fpmi"
version = "0.1.0"
description = ""
authors = ["Dmitry Kozhevnikov"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
jupyter = "^1.0.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"
plotly = "^5.17.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
